--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -2,5 +2,5 @@
 @import "particles/reset";
 
 @import "particles/fonts";
-@import "particles/colors";
+@import "particles/vars";
 @import "particles/layout";
