--- a/src/stylesheets/particles/_reset.scss
+++ b/src/stylesheets/particles/_reset.scss
@@ -3,3 +3,12 @@ body {
     padding: 0;
 }
 
+*{
+    box-sizing: border-box;
+}
+
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
